2004-02-20  Vincent Catros  <Vincent.Catros@elios-informatique.fr>

	* src/fs-ecos.c :
	(jffs2_find) Policy to skip path separator is no longer
	"if '/' then skip" but "while '/' then skip" allowing
	multi '/' separators (i.e : /tmp////foo).
	(find_entry) Policy to detect end of path is no longer
	"if '\0' then end_of_path"
	but "while '/' skip it and then if '\0' then end_of_path"
	allowing path terminated with any number of '/'
	(i.e : chdir(/tmp///)).

2004-03-03  Thomas Koeller  <thomas.koeller@baslerweb.com>

       * src/fs-ecos.c:
       Make JFFS2 honor O_TRUNC flag when opening files /w read access.

2004-02-17  David Woodhouse  <dwmw2@redhat.com>

	* src/fs-ecos.c:
	Don't re-initialise the already-locked f->sem. It makes eCos unhappy. 

2004-01-27  David Woodhouse  <dwmw2@redhat.com>

	* src/write.c: 
	Fix bug noted by Howard Gray; dirents belong to, and should dirty, 
	the _parent_inode, not the child (which may be zero in the case 
	of an unlink).

2004-01-09  Thomas Koeller  <thomas.koeller@baslerweb.com>

       * src/fs-ecos.c: Fixed inode reference counting in jffs2_ops_link().

2004-01-05  Thomas Koeller  <thomas.koeller@baslerweb.com>

	* cdl/jffs2.cdl: Re-added CYGPKG_FS_JFFS2_CFLAGS_REMOVE that had been
	removed by previous change.
	
2003-11-26  David Woodhouse  <dwmw2@redhat.com>

	JFFS2 cleanup and import of newer code. Remove last vestiges of
	Linuxisms such as 'struct inode' from the core code, leaving eCos
	with no excuse, and renaming the eCos 'struct inode' to make that
	point. Fix i_count handling throughout. Clean up remaining Linuxisms
	such as 'struct qstr' to the point where jffs2port.h can be removed.
	Add skeleton for background garbage-collect thread. Fix compression
	so that it's actually called, and even with the right pointers. Turn
	on -Werror again. Zero tolerance is a good thing. Make the i_mode
	conversion functions non-inline to avoid warnings. Fix namespace